[gd_scene load_steps=3 format=3 uid="uid://b8i17wtcjds5f"]

[ext_resource type="Script" uid="uid://ca6fh08vnmfi0" path="res://scripts/menu.gd" id="1_vjb58"]
[ext_resource type="Theme" uid="uid://bcuk6s8r6tipi" path="res://themes/menu.tres" id="2_con2f"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_vjb58")

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_con2f")
text = "PAUSE"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_con2f")
text = "Resume"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_con2f")
text = "Exit"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_con2f")
theme_override_font_sizes/font_size = 20
text = "Volume"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_con2f")
text = "Levels"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_con2f")

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer/OptionButton" to="." method="on_level_changed"]
